--- a/elm01.ipynb
+++ b/elm01.ipynb
@@ -6,7 +6,7 @@
       "name": "elm01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPbuCvPLxpDmU/S7lY6Mt7S",
+      "authorship_tag": "ABX9TyPFHY2gmKXwbI0KrZ1cL51n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1922af9d-7280-4119-8c8a-598671d41abc"
+        "outputId": "01888866-5176-4c15-df45-164d8c1f7211"
       },
       "source": [
         "# elm をインストールする\n",
@@ -55,15 +55,15 @@
         "!gunzip elm\n",
         "!chmod +x elm"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100   630  100   630    0     0   3088      0 --:--:-- --:--:-- --:--:--  3103\n",
-            "100 6647k  100 6647k    0     0  8851k      0 --:--:-- --:--:-- --:--:-- 8851k\n"
+            "100   630  100   630    0     0   3333      0 --:--:-- --:--:-- --:--:--  3315\n",
+            "100 6647k  100 6647k    0     0  5642k      0  0:00:01  0:00:01 --:--:-- 10.7M\n"
           ],
           "name": "stdout"
         }
@@ -72,48 +72,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74VoQkCI34oR",
-        "outputId": "d53ed5ff-a15e-41a6-b075-5b6861ce9433",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!find -name 'temp.elm'"
-      ],
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "./temp.elm\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DWrnzXKD48sm",
-        "outputId": "4272228e-c9a4-4cd3-b323-65bcfd1cebec",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DWrnzXKD48sm"
       },
       "source": [
         "!./elm --help"
       ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: ./elm: No such file or directory\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -122,12 +87,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b48644e-1573-4211-e568-0df7914f9b45"
+        "outputId": "1a39e2ff-e51b-4661-a235-c51489861049"
       },
       "source": [
         "!./elm --version"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,67 +106,92 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YGwz0LEQ8RJS"
+        "id": "VL9JvxWMeLim",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "421e527d-9e11-44ca-fa97-b8ee518dcc4e"
       },
       "source": [
-        "!./elm --help"
+        "%%writefile MyProgram.elm\n",
+        "module MyProgram exposing (..)\n",
+        "print : Int -> Int\n",
+        "print num =\n",
+        "    Debug.log \"num of destiny\" num\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing MyProgram.elm\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VL9JvxWMeLim",
-        "outputId": "c97136b8-f35f-4216-834d-26c9ddbe106f",
+        "id": "C9ZdIajTgVPY",
+        "outputId": "0d83eb14-e162-4fca-f6e2-3e5c7e6c73f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!./elm make --help\n"
+        "%%writefile Main.elm\n",
+        "module Main exposing (..)\n",
+        "-- import MyProgram exposing (print)\n",
+        "import Platform exposing (worker)\n",
+        "\n",
+        "print : Int -> Int\n",
+        "print num =\n",
+        "    Debug.log \"num of destiny\" num\n",
+        "\n",
+        "nodeProgram : a -> Program () () ()\n",
+        "nodeProgram _ =\n",
+        "    worker\n",
+        "        { init = \\() -> ( (), Cmd.none )\n",
+        "        , update = \\() -> \\() -> ( (), Cmd.none )\n",
+        "        , subscriptions = \\() -> Sub.none\n",
+        "        }\n",
+        "\n",
+        "main : Program () () ()\n",
+        "main = \n",
+        "    nodeProgram (print 9)"
       ],
-      "execution_count": 9,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The `make` command compiles Elm code into JS or HTML:\n",
+            "Overwriting Main.elm\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Q0dsWSfhSt1",
+        "outputId": "977a06e8-5d87-4c65-9443-c4f197a82034",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!./elm make --output main.js Main.elm"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Compiling ...\rCompiling (1)\rSuccess! Compiled 1 module.\n",
             "\n",
-            "    \u001b[96melm make <zero-or-more-elm-files>\u001b[0m\n",
-            "\n",
-            "For example:\n",
-            "\n",
-            "    \u001b[92melm make src/Main.elm\u001b[0m\n",
-            "\n",
-            "This tries to compile an Elm file named src/Main.elm, generating an index.html\n",
-            "file if possible.\n",
-            "\n",
-            "You can customize this command with the following flags:\n",
-            "\n",
-            "    \u001b[36m--debug\u001b[0m\n",
-            "        Turn on the time-travelling debugger. It allows you to rewind and replay\n",
-            "        events. The events can be imported/exported into a file, which makes for\n",
-            "        very precise bug reports!\n",
-            "    \n",
-            "    \u001b[36m--optimize\u001b[0m\n",
-            "        Turn on optimizations to make code smaller and faster. For example, the\n",
-            "        compiler renames record fields to be as short as possible and unboxes\n",
-            "        values to reduce allocation.\n",
-            "    \n",
-            "    \u001b[36m--output=<output-file>\u001b[0m\n",
-            "        Specify the name of the resulting JS file. For example\n",
-            "        --output=assets/elm.js to generate the JS at assets/elm.js or\n",
-            "        --output=/dev/null to generate no output at all!\n",
-            "    \n",
-            "    \u001b[36m--report=<report-type>\u001b[0m\n",
-            "        You can say --report=json to get error messages as JSON. This is only\n",
-            "        really useful if you are an editor plugin. Humans should avoid it!\n",
-            "    \n",
-            "    \u001b[36m--docs=<json-file>\u001b[0m\n",
-            "        Generate a JSON file of documentation for a package. Eventually it will\n",
-            "        be possible to preview docs with `reactor` because it is quite hard to\n",
-            "        deal with these JSON files directly.\n",
+            "    Main ───> main.js\n",
             "\n"
           ],
           "name": "stdout"
@@ -211,11 +201,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2wtxwKrae1ZP",
-        "outputId": "9920d2dc-fa45-474b-d766-529c1df719c8",
+        "id": "Gr9sby2om4VX",
+        "outputId": "bce1e851-abb3-4e95-e8c6-9fe9df00c9e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "!node main.js"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Compiled in DEV mode. Follow the advice at https://elm-lang.org/0.19.1/optimize for better performance and smaller assets.\n",
+            "num of destiny: 9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2wtxwKrae1ZP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e4361851-f1f3-4847-eb6c-f2a35debb795"
       },
       "source": [
         "%%writefile temp.elm\n",
@@ -223,7 +237,7 @@
         "greet name =\n",
         "      \"Hello \" ++ name ++ \"!\""
       ],
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,15 +252,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "qqk4Zat8fTtT",
-        "outputId": "ad7605e5-629e-4832-aa55-b44c06112165",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ad7605e5-629e-4832-aa55-b44c06112165"
       },
       "source": [
         "!./elm init"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,15 +284,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "R_b2vVUbe9a5",
-        "outputId": "0a7d9fa0-3cec-4222-d428-521c34018f51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0a7d9fa0-3cec-4222-d428-521c34018f51"
       },
       "source": [
         "!./elm make temp.elm --output=elm.js"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
