--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPf+meOkkckDuhcWl1sE/sH",
+      "authorship_tag": "ABX9TyOlEvmKllZ88Z2UiTkkZ/nw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,35 +56,20 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0faa2f21-bf38-4c02-90e2-11b9e39042b3"
+        "id": "6FkejEE2crA5"
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
-            "\n",
-            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
-            "Sat Jun 19 06:20:17 UTC 2021\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1453,11 +1438,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fEaB9W4BD3p6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e12a9597-3159-461e-9ea8-a51050bc6dba"
+        "id": "fEaB9W4BD3p6"
       },
       "source": [
         "# キーワードリスト\n",
@@ -1466,109 +1447,51 @@
         "!elixir -e 'list=[{:a,1},{:b,2}];IO.inspect list==[a: 1, b: 2]'"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[a: 1, b: 2]\n",
-            "[a: 1, b: 2]\n",
-            "true\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9H-odexhEuvs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "401ff22f-1cfb-49c1-de55-f435ea544af8"
+        "id": "9H-odexhEuvs"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=list++[c: 3];IO.inspect list' # リストなので `++` を使う"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[a: 1, b: 2, c: 3]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VTXf-vAoF7Or",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c025a266-3e6b-4868-d5d3-2f35c5df5f48"
+        "id": "VTXf-vAoF7Or"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=list++[a: 3];IO.inspect list'"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[a: 1, b: 2, a: 3]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ol_6MTCA6GVr",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7f916123-48de-4cc6-f1c4-bd4b8ae20d9d"
+        "id": "Ol_6MTCA6GVr"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list'"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[a: 0, a: 1, b: 2]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4XibpbhSGWnN",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "922d3c51-24d6-4649-957c-0eca704b0a09"
+        "id": "4XibpbhSGWnN"
       },
       "source": [
         "!elixir -e 'list=[a: 1, b: 2];list=[a: 0]++list;IO.inspect list[:a]'"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1588,11 +1511,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H5BrNCcHMnzs",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f8c22d1e-1359-4e4e-a26f-4db9608cd51d"
+        "id": "H5BrNCcHMnzs"
       },
       "source": [
         "# if マクロの構文はキーワードリストを使っている\n",
@@ -1602,17 +1521,7 @@
         "!elixir -e 'IO.inspect if false, [{:do, :this}, {:else, :that}]'"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            ":that\n",
-            ":that\n",
-            ":that\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1640,34 +1549,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZtvjDCA-q1ff",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "df17b891-29a8-4e0c-a9a1-800ce93ca3e7"
+        "id": "ZtvjDCA-q1ff"
       },
       "source": [
         "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}' #=> %{2 => :b, :a => 1}"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{2 => :b, :a => 1}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tx72oY8ArXk4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6b97ac91-acd2-46e1-e8eb-1123baf23a47"
+        "id": "tx72oY8ArXk4"
       },
       "source": [
         "!elixir -e 'map = %{:a => 1, 2 => :b};IO.inspect map[:a]'\n",
@@ -1675,17 +1568,7 @@
         "!elixir -e 'map = %{:a => 1, 2 => :b};IO.inspect map[:c]' #=> nil"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n",
-            ":b\n",
-            "nil\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1703,11 +1586,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1GnIMZX9cCfe",
-        "outputId": "3cd5eb03-5284-415b-deb2-26e5ed027f98",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1GnIMZX9cCfe"
       },
       "source": [
         "!elixir -e 'IO.inspect %{} = %{:a => 1, 2 => :b}' #=> %{2 => :b, :a => 1}\n",
@@ -1715,27 +1594,13 @@
         "!elixir -e ' %{:a => a} = %{2 => :b, :a => 1}; IO.inspect a' #=> 1\n",
         "# !elixir -e 'IO.inspect %{:c => c} = %{:a => 1, 2 => :b}' #=> MatchError"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{2 => :b, :a => 1}\n",
-            "%{2 => :b, :a => 1}\n",
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9mtE19SYAYG7",
-        "outputId": "e7276318-0e14-4599-ae7d-f517f5d9f47d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9mtE19SYAYG7"
       },
       "source": [
         "# 変数も使える\n",
@@ -1744,18 +1609,8 @@
         "!elixir -e 'n = 1; map = %{n => :one}; IO.inspect %{^n => :one} = %{1 => :one, 2 => :two, 3 => :three}' \n",
         "#=> %{1 => :one, 2 => :two, 3 => :three}"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{1 => :one}\n",
-            ":one\n",
-            "%{1 => :one, 2 => :two, 3 => :three}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1769,11 +1624,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EpJ8YTXlBeWA",
-        "outputId": "e6d4e55c-ff60-430b-c370-7c624c068659",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "EpJ8YTXlBeWA"
       },
       "source": [
         "# Map モジュールの便利な関数\n",
@@ -1785,19 +1636,8 @@
         "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect Map.put(map, :c, 3)' #=> %{2 => :b, :a => 1, :c => 3}\n",
         "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect Map.to_list(map)' #=> [{2, :b}, {:a, 1}]"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{2 => :b, :a => 1}\n",
-            "1\n",
-            "%{2 => :b, :a => 1, :c => 3}\n",
-            "[{2, :b}, {:a, 1}]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1817,28 +1657,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NUDLsavSqw_v",
-        "outputId": "3a858e5c-19af-4c24-8f7a-c492c460c135",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "NUDLsavSqw_v"
       },
       "source": [
         "# キーを加えるときは Map.put を用いる\n",
         "!elixir -e 'IO.inspect map = %{:a => 1, 2 => :b}' #=> %{2 => :b, :a => 1}\n",
         "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect Map.put(map, :c, 3)' #=> %{2 => :b, :a => 1, :c => 3}"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{2 => :b, :a => 1}\n",
-            "%{2 => :b, :a => 1, :c => 3}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kiutF7Cogaqz"
+      },
+      "source": [
+        "# マップでキーが重複したときは、あとの値で上書きされる\n",
+        "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect %{:a => 1, 2 => :b, :a => :one}'\n",
+        "#=> %{2 => :b, :a => :one}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FpAq2ItDfNxs"
+      },
+      "source": [
+        "# マップの中のキーがすべてアトムの場合は、つぎのように出力される\n",
+        "!elixir -e 'IO.inspect %{:a => 1, :b => 2}' #=> %{a: 1, b: 2}"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1847,58 +1699,6 @@
       },
       "source": [
         "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kiutF7Cogaqz",
-        "outputId": "3052a8eb-418d-47ac-beed-c64101d20619",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# キーが重複したときは、あとの値で上書きされる\n",
-        "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect %{:a => 1, 2 => :b, :a => :one}'\n",
-        "#=> %{2 => :b, :a => :one}"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[33mwarning: \u001b[0mkey :a will be overridden in map\n",
-            "  nofile:1\n",
-            "\n",
-            "%{2 => :b, :a => :one}\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FpAq2ItDfNxs",
-        "outputId": "84fed4f4-dbd8-4e0e-9f9c-4cf0377e65f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# マップの中のキーがすべてアトムの場合は、つぎのように出力される\n",
-        "!elixir -e 'IO.inspect %{:a => 1, :b => 2}' #=> %{a: 1, b: 2}"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "%{a: 1, b: 2}\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -1916,18 +1716,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0NDpxZ1thNT7"
+        "id": "0NDpxZ1thNT7",
+        "outputId": "5561d5e6-9f0e-463a-e163-3dc67895b7de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# アトムのキーはドット.でも参照できる\n",
-        "!elixir -e 'IO.inspect map.a\n",
-        "1\n",
-        "!elixir -e 'IO.inspect map.2\n",
-        "** (SyntaxError) iex:15: syntax error before: \"2\"\n",
-        "!elixir -e 'IO.inspect map[2]\n",
-        ":b\n",
-        "!elixir -e 'IO.inspect map.c\n",
-        "** (KeyError) key :c not found in: %{2 => :b, :a => 1}\n",
+        "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect map.a' #=> 1\n",
+        "# !elixir -e 'IO.inspect map.2 #=> SyntaxError\n",
+        "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect map[2]' #=> :b\n",
+        "# !elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect map.c' #=> KeyError not found"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            ":b\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FuX-v0E8Vf06"
+      },
+      "source": [
         "\n",
         "Elixirの開発者にはMapモジュールの関数より、map.fieldの構文とパターンマッチングでマップ\n",
         "を扱う方が好まれるようです。はっきりとわかりやすいスタイルでプログラミングができるからでしょう\n",
