--- a/elixir_gumi.ipynb
+++ b/elixir_gumi.ipynb
@@ -6,7 +6,7 @@
       "name": "elixir_gumi.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOlEvmKllZ88Z2UiTkkZ/nw",
+      "authorship_tag": "ABX9TyMUPmu5LUF0tDol6BbYZqF+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,20 +56,35 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5"
+        "id": "6FkejEE2crA5",
+        "outputId": "ddbdb7b7-4a1c-47eb-88e2-334ebb6c25c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!elixir -v\n",
         "!date"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Erlang/OTP 24 [erts-12.0.2] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
+            "\n",
+            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
+            "Sun Jun 20 06:13:00 UTC 2021\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1693,15 +1708,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "qilvfOt8b_i4"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "89lkprhDiASH"
@@ -1716,11 +1722,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0NDpxZ1thNT7",
-        "outputId": "5561d5e6-9f0e-463a-e163-3dc67895b7de",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "0NDpxZ1thNT7"
       },
       "source": [
         "# アトムのキーはドット.でも参照できる\n",
@@ -1729,13 +1731,86 @@
         "!elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect map[2]' #=> :b\n",
         "# !elixir -e 'map = %{:a => 1, 2 => :b}; IO.inspect map.c' #=> KeyError not found"
       ],
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qilvfOt8b_i4"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7shr1dH1DSwE"
+      },
+      "source": [
+        "elixir の開発では Mapモジュールの関数より、map.fieldの構文とパターンマッチングでマップを扱う方が好まれる。\n",
+        "\n",
+        "わかりやすいスタイルでプログラミングができるからだろう。\n",
+        "\n",
+        "参照: \n",
+        "http://blog.plataformatec.com.br/2014/09/writing-assertive-code-with-elixir/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LNZhj9a7Dtvp",
+        "outputId": "62353bb7-5257-4a65-8419-5c99daf65f21",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile temp.exs\n",
+        "defmodule Get_token do\n",
+        "    def get_token(string) do\n",
+        "        parts = String.split(string, \"&\")\n",
+        "        Enum.find_value(parts, fn pair ->\n",
+        "            [key, value] = String.split(pair, \"=\")\n",
+        "            key == \"token\" && value\n",
+        "        end)\n",
+        "    end\n",
+        "end\n",
+        "\n",
+        "str = \"foo=bar&token=value&bar=baz\"\n",
+        "\n",
+        "IO.inspect Get_token.get_token(str)"
+      ],
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1\n",
-            ":b\n"
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_zGIE_VwEOiF",
+        "outputId": "4a734f15-c41b-4df2-91af-896f219af7f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"value\"\n"
           ],
           "name": "stdout"
         }
@@ -1747,14 +1822,11 @@
         "id": "FuX-v0E8Vf06"
       },
       "source": [
+        "# 入れ子のデータ構造\n",
         "\n",
-        "Elixirの開発者にはMapモジュールの関数より、map.fieldの構文とパターンマッチングでマップ\n",
-        "を扱う方が好まれるようです。はっきりとわかりやすいスタイルでプログラミングができるからでしょう\n",
-        "(「Writing assertive code with Elixir」参照)。\n",
-        "\n",
-        "入れ子のデータ構造\n",
-        "\n",
-        "マップやキーワードリストは、それぞれ入れ子にできます。また、マップとキーワードリストを互いに入れ子にすることも可能です。値はそれぞれの構文を組み合わせて得られます。\n",
+        "マップやキーワードリストは、それぞれ入れ子にできます。\n",
+        "また、マップとキーワードリストを互いに入れ子にすることも可能です。\n",
+        "値はそれぞれの構文を組み合わせて得られます。\n",
         "!elixir -e 'IO.inspect users = [\n",
         "...>   john: %{name: \"John\", age: 27, languages: [\"Erlang\", \"Ruby\", \"Elixir\"]},\n",
         "...>   mary: %{name: \"Mary\", age: 29, languages: [\"Elixir\", \"F#\", \"Clojure\"]}\n",
