--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQu8rKerp8Sgk+PXsZm4I0",
+      "authorship_tag": "ABX9TyMZaOlhJT0jMy60kwcAOXQ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,7 @@
         "---\n",
         "メモ\n",
         "\n",
-        "`!elixir -h` としたら ワンライナー `elixir -e` が使えるらしいことがわかった。\n",
+        "`!elixir -h` としたらシェルワンライナー `elixir -e` が使えるらしいことがわかった。\n",
         "\n",
         "`iex` というのがインタラクティブ環境なのだが、colab では使いにくいのでとりあえず使わない。"
       ]
